<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
    android:id="@+id/app_item_share"
    android:title="@string/share" />
    <item
        android:id="@+id/app_item_copy_link"
        android:title="@string/copy_link" />
    <item
        android:id="@+id/app_item_add_to_list"
        android:title="@string/add_to_list" />
    <item
        android:id="@+id/app_item_add_to_library"
        android:title="@string/add_to_remove_from_library"
        android:visible="true"/>
    <item
        android:id="@+id/Rename"
        android:title="@string/rename"
        android:visible="false"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:visible="false"/>

    <item
        android:id="@+id/EDIT"
        android:title="@string/edit"
        android:visible="false"/>
    <item
        android:id="@+id/Add_Chapter"
        android:title="@string/add_chapter"
        android:visible="false"/>
</menu>