<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/baseline_explore_black_24dp"
        android:title="@string/nav_discover"
        android:visible="true"
        android:checked="false"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/baseline_book_black_24dp"
        android:title="@string/nav_library"
        android:visible="true"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/nab_myStories"
        android:icon="@drawable/baseline_store_black_24dp"
        android:title="@string/nab_myStories"
        android:visible="true"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/nav_act"
        android:icon="@drawable/baseline_message_black_24dp"
        android:title="@string/nav_act"
        android:visible="true"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/nav_mes"
        android:icon="@android:drawable/sym_action_email"
        android:title="@string/nav_mes"
        android:visible="true"
        app:showAsAction="always|withText" />
</menu>