<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
     >
    <item
        android:id="@+id/action_settings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings"
         app:showAsAction="always" />
    <item
        android:id="@+id/action_SHARE1"
        android:icon="@drawable/ic_share_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/open_in_browser"
        android:title="@string/open_in_browser" />
    <item
        android:id="@+id/app_item_copy_link"
        android:title="@string/copy_link" />


</menu>