<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/txtTitle_current_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/txtOptionDigit_current_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="&#8942;"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/Written_by_current_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle_current_read"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="@string/written_by"
                android:textAppearance="?android:textAppearance" />

            <TextView
                android:id="@+id/Written_Name_current_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle_current_read"
                android:layout_alignParentStart="true"
                android:layout_marginStart="90dp"
                android:layout_marginTop="10dp"
                android:text="@string/written_name"
                android:textAppearance="?android:textAppearance" />

            <ImageView
                android:id="@+id/imageViewBook_current_read"
                android:layout_width="85dp"
                android:layout_height="82dp"
                android:layout_below="@id/Written_by_current_read"
                android:src="@mipmap/ic_launcher_round"
                android:layout_alignStart="@+id/txtTitle_current_read"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                />


            <TextView
                android:id="@+id/completed_current_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Written_Name_current_read"
                android:layout_alignParentStart="true"
                android:layout_marginStart="90dp"
                android:layout_marginTop="10dp"
                android:text="@string/phase"
                android:textAppearance="?android:textAppearance" />

            <TextView
                android:id="@+id/Chapter_current_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/completed_current_read"
                android:layout_alignStart="@+id/Written_Name_current_read"
                android:layout_marginTop="2dp"
                android:text="@string/chapter"
                android:textAppearance="?android:textAppearance" />

            <TextView
                android:id="@+id/length_current_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Chapter_current_read"
                android:layout_alignStart="@+id/Chapter_current_read"
                android:layout_marginTop="2dp"
                android:text="@string/length"
                android:textAppearance="?android:textAppearance" />

            <TextView
                android:id="@+id/Update_current_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/length_current_read"
                android:layout_alignStart="@+id/length_current_read"
                android:layout_marginTop="2dp"
                android:text="@string/update"
                android:textAppearance="?android:textAppearance" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>